@@ -53,6 +53,7 @@ IRCDVar myIrcd[] = {
      NULL,                      /* channel modes             */
      IRCD_DISABLE,              /* flood                     */
      IRCD_DISABLE,              /* flood other               */
+     IRCD_DISABLE,              /* join throttle             */
      IRCD_DISABLE,              /* vhost                     */
      IRCD_DISABLE,              /* vhost other               */
      IRCD_DISABLE,              /* channek linking           */
