@@ -1,6 +1,7 @@
 Denora Version 1.4.0-SVN
 ------------------------
 Provided by Denora Team <dev@denorastats.org> - 2008
+02/26 F Fixed inspircd11 +j/+J mode data not written to sql       [ #00]
 02/26 F Fixed crash on truncated inspircd11 PUSH message          [#489]
 02/17 F Added missing user modes to UltimateIRCd                  [#488]
 
